<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp" />
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filters_container"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginStart="@dimen/horizontal_page_margin"
            android:id="@+id/filters_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_filter"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:id="@+id/first_guide"
            app:layout_constraintGuide_percent="0.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:id="@+id/second_guide"
            app:layout_constraintGuide_percent="0.75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/first_guide"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/filters_img"
            android:id="@+id/after_txt"
            android:textSize="14sp"
            android:text="@string/filters_brewed_after"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/filters_unselected"
            android:gravity="center"
            android:id="@+id/after_selected_txt"
            style="@style/TextView.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/after_txt"
            app:layout_constraintStart_toStartOf="@id/after_txt"
            app:layout_constraintTop_toBottomOf="@id/after_txt"
            tools:text="12/2021" />
        <TextView
            android:gravity="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/first_guide"
            app:layout_constraintEnd_toStartOf="@id/second_guide"
            android:id="@+id/before_txt"
            android:textSize="14sp"
            android:text="@string/filters_brewed_before"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/filters_unselected"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/before_txt"
            app:layout_constraintStart_toStartOf="@id/before_txt"
            app:layout_constraintEnd_toEndOf="@id/before_txt"
            android:id="@+id/before_selected_txt"
            android:textSize="14sp"
            tools:text="10/2022"
            style="@style/TextView.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            app:layout_constraintStart_toEndOf="@id/second_guide"
            android:layout_marginEnd="@dimen/horizontal_page_margin"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/clearFilter_btn"
            android:fontFamily="@font/montserrat_alternates_bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/filters_clear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:overScrollMode="never"
        android:id="@+id/beers_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/holder_beer"
        app:layout_constraintTop_toBottomOf="@id/filters_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/error_container"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="@dimen/error_anim_size"
            android:layout_height="@dimen/error_anim_size"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/error" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/horizontal_page_margin"
            android:layout_marginEnd="@dimen/horizontal_page_margin"
            style="@style/TextView"
            android:id="@+id/error_txt"
            android:textColor="@color/dark_grey"
            android:gravity="center"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/generic_error_message"
            app:layout_constraintTop_toBottomOf="@id/animation_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"  />
        <com.google.android.material.button.MaterialButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/horizontal_page_margin"
            android:textColor="@color/dark_grey"
            android:id="@+id/retry_btn"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="@string/retry_loading"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/loading_container"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:indeterminateTint="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>